# gruner_ai_features

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: features.py  websocket.py
app/api/routes/: chat.py
app/core/: config.py
app/models/: chat.py  schemas.py
app/services/: ai_service.py  chat_service.py  memory_service.py  reminder_service.py  summarizer.py  task_classifier.py  translation_service.py
static/: index.html
