[project]
name = "gruner-ai-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx>=0.26.0",
    "huggingface-hub>=1.3.4",
    "python-multipart",
    "python-dotenv",
    "groq",
    "qdrant-client>=1.8.0",
]
